--- a/client/index.html
+++ b/client/index.html
@@ -1,10 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://cdn.dribbble.com/userupload/11714883/file/original-8f7d6d211d4bd0dda8898b349e675933.jpg?resize=752x"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Tech world</title>
   </head>
   <body>
     <div id="root"></div>
