--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,7 @@
       href="https://cdn.dribbble.com/userupload/11714883/file/original-8f7d6d211d4bd0dda8898b349e675933.jpg?resize=752x"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tech world</title>
+    <title>Tech Hub</title>
   </head>
   <body>
     <div id="root"></div>
