--- a/client/index.html
+++ b/client/index.html
@@ -2,15 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="https://cdn.dribbble.com/userupload/11714883/file/original-8f7d6d211d4bd0dda8898b349e675933.jpg?resize=752x"
-    />
+    <link rel="icon" type="image/svg+xml" href="" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tech Hub</title>
   </head>
   <body>
+    <!-- https://cdn.dribbble.com/userupload/11714883/file/original-8f7d6d211d4bd0dda8898b349e675933.jpg?resize=752x -->
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
